stylesheets/commons/Brackets.scss
/* ... */
.brkts-popup-mvp {
	background-color: var( --publisher-premier-highlight-background-color, #eee8aa );
	border-radius: 0.5rem;
	font-weight: bold;
}

.brkts-popup-body-detailed-scores {
	display: grid;
	grid-template-rows: repeat( 2, 1fr );
	grid-auto-flow: column;
	gap: 0.125rem 0.1875rem;
	align-items: center;

	&-container {
		display: flex;
		flex-direction: row;
		gap: 0.25rem;
		justify-content: center;
		align-items: center;
		text-align: center;

		&.flipped {
			flex-direction: row-reverse;
		}

		.brkts-popup-spaced > & {
			display: contents;
		}
	}

	&-container.flipped > &,
	.brkts-popup-body-grid-row-detail > .brkts-popup-spaced:nth-last-of-type( 1 ) &-container > & {
		direction: rtl;
	}

	&-main-score {
		font-size: 1rem;
		width: 1.5rem;
	}

	.brkts-popup-body-detailed-score {
		font-weight: bolder;
		font-size: 0.6875rem;
		line-height: 1;

		.theme--dark &-icon > img {
			filter: invert( 1 );
		}
	}
}

.brkts-popup-side-color {
	img {
		outline: 0.125rem solid transparent;
		outline-offset: -0.125rem;
	}

	&--blue img {
		outline-color: #31519c;
	}

	&--red img {
		outline-color: #b12a2a;
	}

	&--purple img {
		outline-color: #7865b7;
	}

	&--orange img {
		outline-color: #cf793c;
	}

	&--radiant img {
		outline-color: #bcd985;
	}

	&--dire img {
		outline-color: #e79e7e;
	}
}

.brkts-popup-side-shade-out {
	opacity: 0.5;
	padding-left: 4px;

	&-flipped {
		opacity: 0.5;
		padding-right: 4px;
	}
}

/**
* Styles for general components
*/

.block-player {
	display: flex;
	align-items: center;

	&.has-team {
		width: 100%;
	}

	&.flipped {
		flex-direction: row-reverse;

		> .name {
			text-align: right;
		}

		> .flag {
			margin-left: 4px;
			margin-right: 0;
		}
	}

	& > .name {
		flex: 1 1;
		min-width: 0;
	}

	> .flag {
		margin-right: 4px;
		flex: 0 0;
	}
}

.block-players-wrapper {
	width: 100%;
}

.note {
	font-size: smaller;
	line-height: 1;
	margin-left: 4px;
}

.block-team {
	align-items: center;
	display: flex;
	gap: 4px;
	width: 100%;

	@media ( max-width: 768px ) {
		gap: 2px;
	}

	> .name {
		flex: 1 1;
		min-width: 0;

		&:has( > .team-name-dynamic ) {
			container: block-team-name / inline-size;

			> .team-name-dynamic {
				content: none;

				@container block-team-name ( min-width: 15px ) and ( max-width: 109px ) {
					&::before {
						content: attr( data-team-shortname );
					}
				}

				@container block-team-name ( min-width: 110px ) and ( max-width: 179px ) {
					&::before {
						content: attr( data-team-bracketname );
					}
				}

				@container block-team-name ( min-width: 180px ) {
					&::before {
						content: attr( data-team-name );
					}
				}
			}
		}
	}

	> .team-template-team-icon {
		display: contents;
		flex: 0 0;

		@supports not ( display: contents ) {
			display: block;
		}
	}

	&.flipped {
		flex-direction: row-reverse;

		> .name {
			text-align: right;
		}
	}

	&-hide-link {
		cursor: default;
		pointer-events: none;
	}

	@media ( max-width: 767px ) {
		&.visible-xs {
			display: flex !important;
		}
	}
}

div.brkts-opponent-hover {
	position: relative;

	&::after {
		content: "";
		height: 100%;
		left: 0;
		pointer-events: none;
		position: absolute;
		top: 0;
		transition: 0.5s;
		transition-property: box-shadow;
		width: 100%;
		z-index: 5;
	}

	&-active::after {
		box-shadow: -1px 0 2px rgba( 0, 0, 0, 0.7 ), 1px 0 2px rgba( 0, 0, 0, 0.7 ), 0 -1px 2px rgba( 0, 0, 0, 0.7 ), 0 1px 2px rgba( 0, 0, 0, 0.7 );

		.theme--dark & {
			box-shadow: -1px 0 2px rgba( 255, 255, 255, 0.7 ), 1px 0 2px rgba( 255, 255, 255, 0.7 ), 0 -1px 2px rgba( 255, 255, 255, 0.7 ), 0 1px 2px rgba( 255, 255, 255, 0.7 );
		}
	}
}

/**
* Bracket designer
*/

.brkts-designer {
	margin-bottom: 40px;

	> * {
		margin: 10px 0;
	}
}

.brkts-designer-template-code {
	height: 300px;
	resize: none;
	width: 100%;
	display: none !important;

	.user-is-sysop &,
	.user-is-reviewer & {
		display: unset !important;
	}
}

.brkts-designer-bracket-name-row {
	display: flex;
}

.brkts-designer-action-row > button {
	margin-left: 10px;

	&:first-child {
		margin-left: 0;
	}
}

.brkts-designer-bracket-name {
	flex: 1 1;
	min-width: 0;
}

.brkts-designer-bracket-link {
	margin-left: 10px;
}

.brkts-designer-import-bracket {
	border: 1px solid #d3d3d3;
	display: flex;
	margin-top: 10px;
	padding: 10px;
	width: 400px;

	> input {
		flex: 1 1;
		min-width: 0;
	}

	> button {
		margin-left: 10px;
	}
}

.brkts-designer-match-row {
	place-content: stretch space-between;
	display: flex;
	height: 22px;
}

.brkts-designer-small-button {
	background-color: #e0e0e0;
	border: solid 1px #c0c0c0;
	display: block;
	font-size: 11px;
	padding: 0;
	text-align: center;
	width: 22px;
	margin: 1px;
	border-radius: 0;
	min-height: 0;
}

.brkts-designer-gallery-grid {
	display: inline-grid;
	grid-gap: 4px 10px;
}

.brkts-designer-gallery-entry {
	font-size: 0.9rem;
}

/**
* Bracket generator
*/

.brkts-dropdown-selected-wrapper > * {
	display: inline-block;
	font-size: 12px;
	padding: 5px;
}

.brkts-template-container-button-wrapper {
	margin-bottom: 10px;

	> * {
		display: inline-block;
		margin-right: 10px;
	}
}

.brkts-dropdown-wrapper {
	position: relative;
}

.brkts-dropdown {
	display: none;
	position: absolute;
	background: #cfcfcf;
	min-width: 150px;

	&-show {
		display: block;
	}

	> * {
		padding: 12px 16px;
		text-decoration: none;
		cursor: pointer;

		&:hover {
			background: rgba( 0, 0, 0, 0.1 );
		}
	}
}

/**
* faction/race specific stuff
*/

.brkts-matchlist-slot-winner .race + .name {
	margin-left: -1px;
}

.block-player > .race {
	margin-right: 4px;
	flex: 0 0;
}

.block-player.flipped > .race {
	margin-left: 4px;
	margin-right: 0;
}

.starcraft-block-archon {
	display: flex;
	align-items: center;

	&.flipped {
		flex-direction: row-reverse;
	}

	&-race {
		flex: 0 0;
		padding: 0 2px 0 0;

		.flipped > & {
			padding: 0 0 0 2px;
		}
	}

	&-players {
		flex: 1 1;
		min-width: 0;
	}
}
/* ... */

